# n8n_python_workflow

./: README.md  compile_library.ps1  pyproject.toml  requirements.txt  setup.py
activities/: 01_general_project_tasks.md  02_documentation_review_checklist.md  03_code_review_checklist.md  03_documentation_review_checklist.md  04_testing_checklist.md  code_review_checklist.md  testing_checklist.md
commands/: documentation.md  git_auto_commit.ps1  lastGitCommand.md
docs/: bd copy.mmd  bd.mmd  convencoes.md  fluxo.mmd  gemini.md  gemini.txt  instrução.txt  inteiraarvore.md  pastas.md
docs/0.0.BuildInstrucao/: CriteriosParaConstruirInstrucao.md  dpseek_criteriosParaConstruirinstr.md  exemplos.md  teste.md
docs/0.001.firstgemini_cli/: primeirainstrucao.md
docs/1.1classificao/: instruir_classificacao.md
docs/1.Ingestao/: fluxoIngestao.mmd  instrucao.md  instrucaoingestao.md  redeneural_fluxoingestao.mmd
docs/Analises/: ANALISE.md
docs/comentarios/: camadas.mmd  fluxocoment.mmd  sequencecomment.mmd  timeline.mmd
docs/commands/: git_auto_commit.md
docs/geminiInterface/: package-lock.json  tkinter_gemini.py
docs/gemini_cli/: instrucao_usar.md
docs/help/: Orquestrador.md  PersistenciaSupabase.md  __init__.md  main.md  supabase_config.md
docs/instruirteste/: INSTRUCOES_TESTES.md  dpseek_instruirteste.md  gemini_instruirteste.md  gpt_instruiteste.md
docs/n8n_postgree/: primeirainstrução.md
docs/rules/: activity_management.md  coding_conventions.md  (+5 more)
src/: Orquestrador.py  PersistenciaSupabase.py  __init__.py  main.py  supabase_config.py
(+155 files in other folders)
